[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ominfra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev547'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'ominfra'
dependencies = [
    'omlish == 0.0.0.dev547',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.0.dev547',
    'paramiko ~= 4.0',
    'asyncssh ~= 2.22',
]
omdev = [
    'omdev == 0.0.0.dev547',
]
ssh = [
    'paramiko ~= 4.0',
    'asyncssh ~= 2.22',
]

[project.entry-points]
'omlish.manifests' = {ominfra = 'ominfra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'ominfra',
    'ominfra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '*.hh',
    '.omlish-manifests.json',
    'README',
    'README.md',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
    'DESIGN.md',
]
'ominfra.clouds.aws.instancetypes' = [
    'cache.json.gz',
]
'ominfra.clouds.aws.models.services' = [
    '*.toml',
]
'ominfra.manage.targets' = [
    'bestpython.sh',
]
'ominfra.nginx' = [
    'patches/nginx/*',
]
