[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ominfra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/om'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.31'
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'ominfra'
dependencies = [
    'omcore == 0.0.31',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.31',
]
omdev = [
    'omdev == 0.0.31',
]

[project.entry-points]
'omcore.manifests' = {ominfra = 'ominfra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'ominfra',
    'ominfra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.om-manifests.json',
    'py.typed',
    '*.md',
    'README',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
]
'ominfra.clouds.aws.instancetypes' = [
    'cache.json.bz2',
]
'ominfra.clouds.aws.models.services' = [
    '*.toml',
]
'ominfra.manage.targets' = [
    'bestpython.sh',
]
'ominfra.nginx' = [
    'patches/nginx/*',
    'versions.json',
]
