[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omlish'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '>=3.12'
version = '0.0.0.dev254'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
]
description = 'omlish'

[project.optional-dependencies]
all = [
    'anyio ~= 4.9',
    'sniffio ~= 1.3',
    'greenlet ~= 3.1',
    'trio ~= 0.29',
    'trio-asyncio ~= 0.15',
    'lz4 ~= 4.4',
    'python-snappy ~= 0.7',
    'zstandard ~= 0.23',
    'brotli ~= 1.1',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'psutil ~= 7.0',
    'orjson ~= 3.10',
    'ujson ~= 5.10',
    'pyyaml ~= 6.0',
    'cbor2 ~= 5.6',
    'cloudpickle ~= 3.1',
    'httpx[http2] ~= 0.28',
    'wrapt ~= 1.17',
    'cryptography ~= 44.0',
    'sqlalchemy[asyncio] ~= 2.0',
    'pg8000 ~= 1.31',
    'pymysql ~= 1.1',
    'aiomysql ~= 0.2',
    'aiosqlite ~= 0.21',
    'asyncpg ~= 0.30',
    'apsw ~= 3.47',
    'sqlean.py ~= 3.45',
    'duckdb ~= 1.2',
    'pytest ~= 8.0',
    'anyio ~= 4.9',
    'sniffio ~= 1.3',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'orjson ~= 3.10',
    'pyyaml ~= 6.0',
    'wrapt ~= 1.17',
]
async = [
    'anyio ~= 4.9',
    'sniffio ~= 1.3',
    'greenlet ~= 3.1',
    'trio ~= 0.29',
    'trio-asyncio ~= 0.15',
]
compress = [
    'lz4 ~= 4.4',
    'python-snappy ~= 0.7',
    'zstandard ~= 0.23',
    'brotli ~= 1.1',
]
diag = [
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'psutil ~= 7.0',
]
formats = [
    'orjson ~= 3.10',
    'ujson ~= 5.10',
    'pyyaml ~= 6.0',
    'cbor2 ~= 5.6',
    'cloudpickle ~= 3.1',
]
http = [
    'httpx[http2] ~= 0.28',
]
misc = [
    'wrapt ~= 1.17',
]
secrets = [
    'cryptography ~= 44.0',
]
sqlalchemy = [
    'sqlalchemy[asyncio] ~= 2.0',
]
sqldrivers = [
    'pg8000 ~= 1.31',
    'pymysql ~= 1.1',
    'aiomysql ~= 0.2',
    'aiosqlite ~= 0.21',
    'asyncpg ~= 0.30',
    'apsw ~= 3.47',
    'sqlean.py ~= 3.45',
    'duckdb ~= 1.2',
]
testing = [
    'pytest ~= 8.0',
]
plus = [
    'anyio ~= 4.9',
    'sniffio ~= 1.3',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'orjson ~= 3.10',
    'pyyaml ~= 6.0',
    'wrapt ~= 1.17',
]

[project.entry-points]
'omlish.manifests' = {omlish = 'omlish'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omlish',
    'omlish.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '.manifests.json',
    'LICENSE',
    'LICENSE.txt',
    'specs/jsonschema/schemas/draft202012/*.json',
    'specs/jsonschema/schemas/draft202012/vocabularies/*.json',
]
