[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omlish'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev478'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'omlish'

[project.optional-dependencies]
all = [
    'anyio ~= 4.11',
    'sniffio ~= 1.3',
    'greenlet ~= 3.2',
    'trio ~= 0.32',
    'trio-asyncio ~= 0.15',
    'lz4 ~= 4.4',
    'python-snappy ~= 0.7',
    'zstandard ~= 0.25; python_version < "3.14"',
    'brotli ~= 1.2',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'psutil ~= 7.1',
    'orjson ~= 3.11',
    'ujson ~= 5.11',
    'pyyaml ~= 6.0',
    'cbor2 ~= 5.7',
    'cloudpickle ~= 3.1',
    'httpx[http2] ~= 0.28',
    'wrapt ~= 2.0',
    'cryptography ~= 46.0',
    'sqlalchemy[asyncio] ~= 2.0',
    'pg8000 ~= 1.31',
    'pymysql ~= 1.1',
    'aiomysql ~= 0.3',
    'aiosqlite ~= 0.21',
    'asyncpg ~= 0.30',
    'apsw ~= 3.51',
    'sqlean.py ~= 3.50',
    'duckdb ~= 1.4',
    'markupsafe ~= 3.0',
    'jinja2 ~= 3.1',
    'pytest ~= 9.0',
    'anyio ~= 4.11',
    'sniffio ~= 1.3',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'orjson ~= 3.11',
    'pyyaml ~= 6.0',
    'wrapt ~= 2.0',
]
async = [
    'anyio ~= 4.11',
    'sniffio ~= 1.3',
    'greenlet ~= 3.2',
    'trio ~= 0.32',
    'trio-asyncio ~= 0.15',
]
compress = [
    'lz4 ~= 4.4',
    'python-snappy ~= 0.7',
    'zstandard ~= 0.25; python_version < "3.14"',
    'brotli ~= 1.2',
]
diag = [
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'psutil ~= 7.1',
]
formats = [
    'orjson ~= 3.11',
    'ujson ~= 5.11',
    'pyyaml ~= 6.0',
    'cbor2 ~= 5.7',
    'cloudpickle ~= 3.1',
]
http = [
    'httpx[http2] ~= 0.28',
]
misc = [
    'wrapt ~= 2.0',
]
secrets = [
    'cryptography ~= 46.0',
]
sqlalchemy = [
    'sqlalchemy[asyncio] ~= 2.0',
]
sqldrivers = [
    'pg8000 ~= 1.31',
    'pymysql ~= 1.1',
    'aiomysql ~= 0.3',
    'aiosqlite ~= 0.21',
    'asyncpg ~= 0.30',
    'apsw ~= 3.51',
    'sqlean.py ~= 3.50',
    'duckdb ~= 1.4',
]
templates = [
    'markupsafe ~= 3.0',
    'jinja2 ~= 3.1',
]
testing = [
    'pytest ~= 9.0',
]
plus = [
    'anyio ~= 4.11',
    'sniffio ~= 1.3',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'orjson ~= 3.11',
    'pyyaml ~= 6.0',
    'wrapt ~= 2.0',
]

[project.entry-points]
'omlish.manifests' = {omlish = 'omlish'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omlish',
    'omlish.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '*.hh',
    '.omlish-manifests.json',
    'LICENSE',
    'LICENSE.txt',
    'specs/jsonschema/schemas/draft202012/*.json',
    'specs/jsonschema/schemas/draft202012/vocabularies/*.json',
]
