[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omllm'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.28'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'omllm'
dependencies = [
    'omlish == 0.0.28',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.28',
]
omdev = [
    'omdev == 0.0.28',
]

[project.entry-points]
'omlish.manifests' = {omllm = 'omllm'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omllm',
    'omllm.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.omlish-manifests.json',
    'py.typed',
    '*.md',
    'README',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
]
'omllm.modeldb' = [
    'cache.json.bz2',
]
