[build-system]
requires = [
    'setuptools',
    'setuptools-rust',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ommlds-rs'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev478'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'ommlds'
dependencies = [
    'ommlds == 0.0.0.dev478',
]

[tool.setuptools]

[tool.setuptools.packages.find]
include = []
