[build-system]
requires = [
    'setuptools',
    'setuptools-rust',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ommlds-rs'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.4'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'ommlds'
dependencies = [
    'ommlds == 0.0.4',
]

[tool.setuptools]

[tool.setuptools.packages.find]
include = []
