[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ommlds'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.5'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'ommlds'
dependencies = [
    'omlish == 0.0.5',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.5',
    'llama-cpp-python ~= 0.3',
    'mlx ~= 0.31; sys_platform == "darwin"',
    'mlx-lm ~= 0.31; sys_platform == "darwin"',
    'sentencepiece ~= 0.2',
    'tiktoken ~= 0.12',
    'tinygrad ~= 0.12',
    'tokenizers ~= 0.22',
    'torch ~= 2.11',
    'transformers ~= 5.5',
    'sentence-transformers ~= 5.4',
    'huggingface-hub ~= 1.10',
    'datasets ~= 4.8',
    'regex >= 2026.4',
    'numpy >= 1.26',
    'pytesseract ~= 0.3',
    'rapidocr-onnxruntime ~= 1.4',
    'pillow ~= 12.2',
    'ddgs ~= 9.13',
    'tavily-python ~= 0.7',
    'mwparserfromhell ~= 0.7',
    'wikitextparser ~= 0.56',
    'lxml >= 5.4',
]
omdev = [
    'omdev == 0.0.5',
]
backends = [
    'llama-cpp-python ~= 0.3',
    'mlx ~= 0.31; sys_platform == "darwin"',
    'mlx-lm ~= 0.31; sys_platform == "darwin"',
    'sentencepiece ~= 0.2',
    'tiktoken ~= 0.12',
    'tinygrad ~= 0.12',
    'tokenizers ~= 0.22',
    'torch ~= 2.11',
    'transformers ~= 5.5',
    'sentence-transformers ~= 5.4',
]
huggingface = [
    'huggingface-hub ~= 1.10',
    'datasets ~= 4.8',
]
nanochat = [
    'regex >= 2026.4',
]
numpy = [
    'numpy >= 1.26',
]
ocr = [
    'pytesseract ~= 0.3',
    'rapidocr-onnxruntime ~= 1.4',
]
pillow = [
    'pillow ~= 12.2',
]
search = [
    'ddgs ~= 9.13',
    'tavily-python ~= 0.7',
]
wiki = [
    'mwparserfromhell ~= 0.7',
    'wikitextparser ~= 0.56',
]
xml = [
    'lxml >= 5.4',
]

[project.entry-points]
'omlish.manifests' = {ommlds = 'ommlds'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'ommlds',
    'ommlds.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.omlish-manifests.json',
    'README',
    'README.md',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
    'DESIGN.md',
]
'ommlds.cli.modes.chat.interfaces.textual.styles' = [
    '*.tcss',
]
