[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ommlds'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.28'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'ommlds'
dependencies = [
    'omlish == 0.0.28',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.28',
    'llama-cpp-python ~= 0.3',
    'mlx ~= 0.32; sys_platform == "darwin"',
    'mlx-lm ~= 0.31; sys_platform == "darwin"',
    'sentencepiece ~= 0.2',
    'tiktoken ~= 0.13',
    'tinygrad ~= 0.13',
    'tokenizers ~= 0.22',
    'torch ~= 2.13',
    'transformers ~= 5.11',
    'sentence-transformers ~= 5.6',
    'huggingface-hub ~= 1.23',
    'datasets ~= 5.0',
    'regex >= 2026.7',
    'numpy >= 2.5',
    'pytesseract ~= 0.3',
    'rapidocr-onnxruntime ~= 1.4',
    'pillow ~= 12.3',
    'ddgs ~= 9.14',
    'tavily-python ~= 0.7',
    'lxml >= 6.1',
]
omdev = [
    'omdev == 0.0.28',
]
backends = [
    'llama-cpp-python ~= 0.3',
    'mlx ~= 0.32; sys_platform == "darwin"',
    'mlx-lm ~= 0.31; sys_platform == "darwin"',
    'sentencepiece ~= 0.2',
    'tiktoken ~= 0.13',
    'tinygrad ~= 0.13',
    'tokenizers ~= 0.22',
    'torch ~= 2.13',
    'transformers ~= 5.11',
    'sentence-transformers ~= 5.6',
]
huggingface = [
    'huggingface-hub ~= 1.23',
    'datasets ~= 5.0',
]
nanochat = [
    'regex >= 2026.7',
]
numpy = [
    'numpy >= 2.5',
]
ocr = [
    'pytesseract ~= 0.3',
    'rapidocr-onnxruntime ~= 1.4',
]
pillow = [
    'pillow ~= 12.3',
]
search = [
    'ddgs ~= 9.14',
    'tavily-python ~= 0.7',
]
xml = [
    'lxml >= 6.1',
]

[project.entry-points]
'omlish.manifests' = {ommlds = 'ommlds'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'ommlds',
    'ommlds.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.omlish-manifests.json',
    'py.typed',
    '*.md',
    'README',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
]
'ommlds.cli.chat.interfaces.textual.styles' = [
    '*.tcss',
]
'ommlds.cli.chat.interfaces.web' = [
    'resources/*',
]
'ommlds.modeldb' = [
    'cache.json.bz2',
]
