[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ommlx-cext'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '~=3.12'
version = '0.0.0.dev18'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
]
description = 'ommlx'
dependencies = [
    'omlish == 0.0.0.dev18',
]
optional-dependencies = {torch = [
    'torch ~= 2.4',
], wiki = [
    'mwparserfromhell ~= 0.6',
    'wikitextparser ~= 0.56',
], xml = [
    'lxml ~= 5.3; python_version < "3.13"',
]}

[tool.setuptools]
include-package-data = false
