[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ommlx'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '>=3.12'
version = '0.0.0.dev114'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
]
description = 'ommlx'
dependencies = [
    'omdev == 0.0.0.dev114',
    'omlish == 0.0.0.dev114',
]

[project.optional-dependencies]
all = [
    'sentence-transformers ~= 3.2',
    'transformers ~= 4.45',
    'huggingface-hub ~= 0.25',
    'datasets ~= 3.1',
    'llama-cpp-python ~= 0.3',
    'numpy >= 1.20',
    'pytesseract ~= 0.3',
    'rapidocr-onnxruntime ~= 1.3',
    'pillow ~= 11.0',
    'tinygrad ~= 0.9',
    'torch ~= 2.5',
    'mwparserfromhell ~= 0.6',
    'wikitextparser ~= 0.56',
    'lxml ~= 5.3; python_version < "3.13"',
]
backends = [
    'sentence-transformers ~= 3.2',
    'transformers ~= 4.45',
]
huggingface = [
    'huggingface-hub ~= 0.25',
    'datasets ~= 3.1',
]
llamacpp = [
    'llama-cpp-python ~= 0.3',
]
numpy = [
    'numpy >= 1.20',
]
ocr = [
    'pytesseract ~= 0.3',
    'rapidocr-onnxruntime ~= 1.3',
]
pillow = [
    'pillow ~= 11.0',
]
tinygrad = [
    'tinygrad ~= 0.9',
]
torch = [
    'torch ~= 2.5',
]
wiki = [
    'mwparserfromhell ~= 0.6',
    'wikitextparser ~= 0.56',
]
xml = [
    'lxml ~= 5.3; python_version < "3.13"',
]

[project.entry-points]
'omlish.manifests' = {ommlx = 'ommlx'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'ommlx',
    'ommlx.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '.manifests.json',
    'LICENSE',
]
