[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omserv'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '>=3.12'
version = '0.0.0.dev11'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
]
description = 'omserv'
dependencies = [
    'omlish == 0.0.0.dev11',
]

[project.optional-dependencies]
all = [
    'h11 >= 0.14',
    'h2 >= 4.1',
    'priority >= 2',
    'wsproto >= 1.2',
]
server = [
    'h11 >= 0.14',
    'h2 >= 4.1',
    'priority >= 2',
    'wsproto >= 1.2',
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
    'omserv',
    'omserv.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]
