[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omserv'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev478'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'omserv'
dependencies = [
    'omlish == 0.0.0.dev478',
]

[project.optional-dependencies]
all = [
    'h11 ~= 0.16',
    'h2 ~= 4.3',
    'priority ~= 2.0',
    'wsproto ~= 1.3',
    'jinja2 ~= 3.1',
]
server = [
    'h11 ~= 0.16',
    'h2 ~= 4.3',
    'priority ~= 2.0',
    'wsproto ~= 1.3',
]
templates = [
    'jinja2 ~= 3.1',
]

[project.entry-points]
'omlish.manifests' = {omserv = 'omserv'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omserv',
    'omserv.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '*.hh',
    '.omlish-manifests.json',
    'LICENSE',
    'LICENSE.txt',
    'nginx/patches/*.patch',
    'server/resources/*.ico',
]
