[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omxtra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev555'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'omxtra'
dependencies = [
    'omlish == 0.0.0.dev555',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.0.dev555',
    'h11 ~= 0.16',
    'h2 ~= 4.3',
    'priority ~= 2.0',
    'wsproto ~= 1.3',
    'paramiko ~= 4.0',
    'asyncssh ~= 2.22',
    'jinja2 ~= 3.1',
]
omdev = [
    'omdev == 0.0.0.dev555',
]
server = [
    'h11 ~= 0.16',
    'h2 ~= 4.3',
    'priority ~= 2.0',
    'wsproto ~= 1.3',
]
ssh = [
    'paramiko ~= 4.0',
    'asyncssh ~= 2.22',
]
templates = [
    'jinja2 ~= 3.1',
]

[project.entry-points]
'omlish.manifests' = {omxtra = 'omxtra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omxtra',
    'omxtra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.omlish-manifests.json',
    'README',
    'README.md',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
    'DESIGN.md',
]
'omxtra.server.resources' = [
    '*',
]
