[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omxtra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.23'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'omxtra'
dependencies = [
    'omlish == 0.0.23',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.23',
    'paramiko ~= 5.0',
    'asyncssh ~= 2.23',
]
omdev = [
    'omdev == 0.0.23',
]
ssh = [
    'paramiko ~= 5.0',
    'asyncssh ~= 2.23',
]

[project.entry-points]
'omlish.manifests' = {omxtra = 'omxtra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omxtra',
    'omxtra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.omlish-manifests.json',
    'README',
    'README.md',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
    'DESIGN.md',
]
