[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omxtra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/om'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.29'
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'omxtra'
dependencies = [
    'omcore == 0.0.29',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.29',
    'greenlet ~= 3.5',
    'paramiko ~= 5.0',
    'asyncssh ~= 2.24',
    'mwparserfromhell ~= 0.7',
    'wikitextparser ~= 1.0',
]
omdev = [
    'omdev == 0.0.29',
]
async = [
    'greenlet ~= 3.5',
]
ssh = [
    'paramiko ~= 5.0',
    'asyncssh ~= 2.24',
]
wiki = [
    'mwparserfromhell ~= 0.7',
    'wikitextparser ~= 1.0',
]

[project.entry-points]
'omcore.manifests' = {omxtra = 'omxtra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omxtra',
    'omxtra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.om-manifests.json',
    'py.typed',
    '*.md',
    'README',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
]
