[package]
name = "rustbpe"
version = "0.1.0"
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dary_heap = "0.3"
indexmap = "2.13"
fancy-regex = "0.16.2"
log = "0.4.29"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-log = "0.13.2"
ahash = "0.8.12"
rayon = "1.11.0"
compact_str = "0.9.0"

[profile.release]
lto = true
codegen-units = 1
