[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'


##

[project]
name = 'omdevthing'


##

[tool.omlish.pyproject.srcs]
main = ['omdevthing']

[tool.omlish.pyproject.venvs]
default = { interp = '3.12.7', requires = ['-rrequirements-dev.txt'], srcs = ['@main'] }
