[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'


##

[project]
name = 'omdevthing'


##

[tool.omlish.pyproject.srcs]
main = ['omdevthing']

[tool.omlish.pyproject.venvs]
default = { interp = '3.13.5', requires = ['-rrequirements-dev.txt'], srcs = ['@main'] }
